--- a/index.html
+++ b/index.html
@@ -10,27 +10,33 @@
  <link rel="stylesheet" href="styles/assignment.css">
 </head>
 <body class="azeret-mono-normal">
-    <header>
-<nav>
+    
+<nav class="secondary-bg">
    <h3 class="nav-title">Awlad.H</h3>
    <ul>
    <li><a class="color"  href=""><button class="b-t-n-primary">Download Resume</button></a></li>
    </ul>
 </nav>
-<img src="B10A1-Challenge-Begins/assets/Group.png" alt="">
+<header class="header"> 
+
+<img class="img" src="B10A1-Challenge-Begins/assets/Group.png" alt="">
 
 <div class="banner"></div>
 
-<div class="banner-content"></div>
-<h1>"In the near future, I hope to become a Developer."</h1>
-<p class="banner-description">That's a great aspiration! Becoming a developer can be an exciting journey with plenty of opportunities for growth and creativity.</p>
+<div class="banner-content">
+<h1>"In the near future, I hope to <br>become a Developer."</h1>
+<p class="banner-description">That's a great aspiration! Becoming a developer can be an exciting journey with plenty of opportunities for growth and creativity<br></p><div></div>
 <button class="button">Contact with me</button>
     </header>
     <main>
+<section class="about secondary-bg">
+    <h3 class="section-title">Why Web Development??</h3>
+    <p class="section-des">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat non ullam ut delectus inventore nostrum!</p>
+</section>
 
     </main>
     <footer>
 
     </footer>
 </body>
-</html>
+</html
