--- a/index.html
+++ b/index.html
@@ -31,10 +31,20 @@
     <main>
 <section class="about secondary-bg">
     <h3 class="section-title">Why Web Development??</h3>
-    <p class="section-des">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat non ullam ut delectus inventore nostrum!</p>
+    <p class="section-des"> Web development encompasses various skills including frontend (client-side), backend (server-side), and database management. This diversity allows developers to continuously learn and adapt.</p>
 </section>
 
     </main>
+    <div class="code">
+<div class="codeing">
+   <H3 class="i-will"> I will Do Coding and Change The World</h3>
+   <p class="codeing-d">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta animi repellat facilis doloribus repudiandae? Maiores mollitia eveniet </p>
+
+    <button class="learn-more">Learn More</button>
+</div>
+
+<div><img class="layer1" src="B10A1-Challenge-Begins/assets/Layer_1.png" alt=""></div>
+</div>
     <footer>
 
     </footer>
