--- a/index.html
+++ b/index.html
@@ -22,24 +22,21 @@
                 <img src="./assets/Group.png" alt="">
                 <h1 class="banner-text">"In the near future, I hope to become a Developer."</h1>
                 <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br> Lorem Ipsum has been
-                    the
-                    industry's standard dummy text.
+                    A developer, in the context of software development, is someone who writes code to create software applications, websites, or systems. 
                 </p>
                 <button>Connect With Me</button>
             </div>
         </div>
         <div class="information">
             <h2>Why Web Development??</h2>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum <br> has been the
-                industry's standard dummy text.</p>
+            <p>Becoming a web developer involves mastering several key skills and technologies. you can build a solid <br> foundation as a web developer and stay competitive in the field.</p>
             <div class="section1">
                 <div class="left-sec ">
                     <h3>
                         I will Do Coding and <br> Change The World
                     </h3>
                     <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        Coding indeed has the power to change the world in numerous ways. 
                     </p>
                     <button>Learn More</button>
                 </div>
@@ -87,11 +84,11 @@
             <h2>My Inspiration</h2>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum <br> has been the
                 industry's standard dummy text.</p>
-            <div class="video">
-                <iframe width="1076" height="550" src="https://www.youtube.com/embed/tgbNymZ7vqY">
-                </iframe>
-            </div>
+            <div class="video">0
+                <iframe width="1076" height="550" src=https://youtu.be/WWKTfAI1saU?si=h8qh4DAaeqqwqcv8>
+            
         </div>
+                </iframe>
 
 
 
