--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                     <h3>
                         I will Do Coding and <br> Change The World
                     </h3>
-                    <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    
+                    <p> The impact of coding goes beyond writing lines of code it's about leveraging technology to solve problems and create a more inclusive and sustainable future. 
                     </p>
                     <button>Learn More</button>
                 </div>
@@ -69,7 +69,7 @@
                         I will Do Coding and <br> Change The World
                     </h3>
                     <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        Coding involves breaking down complex problems into smaller, manageable tasks and creating systematic solutions. This improves analytical and critical thinking skills.
                     </p>
                     <button>Learn More</button>
                 </div>
@@ -82,10 +82,9 @@
 
         <div class="inspiration">
             <h2>My Inspiration</h2>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum <br> has been the
-                industry's standard dummy text.</p>
+            <p>"Jhankar Mahbub is my inspiration. I watch his YouTube videos every day. That's where I get this hope."<br>"He is very intelligent and a good person."</p>
             <div class="video">0
-                <iframe width="1076" height="550" src=https://youtu.be/WWKTfAI1saU?si=h8qh4DAaeqqwqcv8>
+                <iframe width="1076" height="550" src=https://youtu.be/NkXbbmrxWzs?si=Goj58djv62LYCiBY>
             
         </div>
                 </iframe>
@@ -94,25 +93,26 @@
 
         <div class="target">
             <h2>My Current Target</h2>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum <br> has been the
-                industry's standard dummy text.</p>
+            <p>My current goal is to learn HTML and CSS thoroughly. Then, to progress with these and become a skilled developer with a good mindset.</p>
             <div class="target-data">
                 <div class="html">
                     <img src="./assets/html.png" alt="">
                     <h1>HTML</h1>
-                    <p>Lorem Ipsum is simply dummy text of the printing.</p>
+                    <p>
+                        HTML, or Hypertext Markup Language, is the standard language used to create and design web pages. .</p>
                     <a href="">Learn More</a>
                 </div>
                 <div class="html css">
                     <img src="./assets/css.png" alt="">
-                    <h1>HTML</h1>
-                    <p>Lorem Ipsum is simply dummy text of the printing.</p>
+                    <h1>CSS</h1>
+                    <p>CSS, or Cascading Style Sheets, is a stylesheet language used to describe the presentation of a document written in HTML .</p>
                     <a href="">Learn More</a>
                 </div>
                 <div class="html js">
                     <img src="./assets/js.png" alt="">
-                    <h1>HTML</h1>
-                    <p>Lorem Ipsum is simply dummy text of the printing.</p>
+                    <h1>JAVASCRIPT</h1>
+                    <p>
+                        JavaScript is a high-level, interpreted programming language that is primarily used to create dynamic and interactive effects within web browsers.</p>
                     <a href="">Learn More</a>
                 </div>
                 <div class="css">
@@ -128,8 +128,7 @@
         <div class="next-target">
             <h2>My Inspiration</h2>
             <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum <br> has been the
-                industry's standard dummy text.
+                "Jhankar Mahbub is my inspiration. I watch his YouTube videos every day. That's where I get this hope."<br>"He is very intelligent and a good person.
             </p>
             <div class="react">
                 <img src="./assets/react.png" alt="">
@@ -138,8 +137,7 @@
                         ReactJS
                     </h2>
                     <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the industry's standard dummy text.
+                        ReactJS is a popular JavaScript library for building user interfaces. 
                     </p>
 
                     <a href="">Learn More</a>
@@ -152,8 +150,7 @@
                         MongoDB
                     </h2>
                     <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the industry's standard dummy text.
+                        MongoDB is a popular open-source NoSQL database management system. It's designed to handle large volumes of data and is known for its flexibility, scalability, and performance. 
                     </p>
 
                     <a href="">Learn More</a>
@@ -165,9 +162,7 @@
                     <h2>
                         NodeJs
                     </h2>
-                    <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the industry's standard dummy text.
+                    <p>Node.js is a runtime environment that allows developers to run JavaScript on the server-side. I
                     </p>
 
                     <a href="">Learn More</a>
@@ -177,8 +172,7 @@
 
         <div class="support">
             <h2>I Need Support</h2>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum <br> has been the
-                industry's standard dummy text.</p>
+            <p>Need any help plz submit it here.</p>
             <div class="submit">
                 <input type="text" name="" id="" placeholder="Suggest me any feedback for me">
                 <button>Sumbit</button>
